# Menir

./: .coverage  .env.example  .env.local  .env.template  .gemini.md  .gitattributes  .gitignore  .menir_overhaul  30_days_menir_innovate.md  AGENTS.md  BOOT_RESUME_20251029_180714Z.txt  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FINAL_SETUP_GUIDE.md  HOW_TO.md  MEMOETIC_GUIDE.md  MENIR_ARCHITECT_BRIEF.md  MENIR_CONTEXT.md  MENIR_INTERNAL.md  MENIR_KERNEL.md  MENIR_KERNEL.xml  MENIR_MASTER_PLAN_V5_4.md  MENIR_MASTER_PLAN_V5_5.md  MENIR_PLAN.md  MENIR_PRODUCTION_HARDENING_SPEC.md  MENIR_STATE.md  MENIR_SYSTEM_SNAPSHOT_v1.0.md  MENIR_SYSTEM_SNAPSHOT_v1.1.md  MENIR_TECHNICAL_ASSESSMENT_v1.1.md  MENIR_V11_RISK_MODEL.md  Makefile  PLAY_MENIR.bat  POST_BOOTSTRAP_README.md  QUICKSTART.md  QUICKSTART_FALLBACK.md  README.md  README.template.md  README_BOOTNOW.md  README_Functions.md  (+146 more)
.devcontainer/: devcontainer.json
.githooks/: post-commit  post-commit.ps1  post-commit.sh  post-commit.txt
.github/: PULL_REQUEST_TEMPLATE.md
.idx/: dev.nix
.semgrep/: menir_v3_rules.yaml
Menir_Inbox/: BECO-extrato_teste.xml
audit/: zk_audit.jsonl
cypher/: check_user_privileges.cypher  claims_ingest_final_diagnose.cypher  cleanup.cypher  config_menir.cypher  diagnose_claims.cypher  diagnose_claims_clean.cypher  episodes_log_success.cypher  sanity_reports.cypher  thread_email.cypher  upsert_documento.cypher  upsert_transacao.cypher  validate_claims.cypher  validate_claims_clean.cypher  validate_claims_final.cypher
data_archive/: brain_insight.txt  briefing_ella.txt  rebuild_nodes_count.csv  (+8 more)
(+550 files in other folders)
